frontend/src/Styles/Profile.css
.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 9px;
    width: 100%;
    margin-top: 30px;
}

body{
    display: block;
    justify-content: center;
    align-items: center;
}
/* Card and container css adapted from https://www.w3schools.com/howto/howto_css_cards.asp */
.prof-container {
    margin: 0;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    perspective: 1000px;
}

.prof-card {
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
    position: relative;
    width: 300px;
    height: 400px;
    transform-style: preserve-3d; /* Maintains 3D hierarchy */
    transition: all 0.3s ease-in-out;
    display: inline-block;
    background: #ffffff;
    min-width: 35%;
    min-height: 65%;
    height: auto;
    width: auto;
    border-radius: 12px;
    padding: 20px;
    text-align: center;
}

.prof-card:hover{
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    padding: 30px;
}

.prof-card.clicked{
    transform: rotateY(180deg);
}

.front, .preferences {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    border-radius: 10px;
    overflow: hidden;
}

.front {
    transform: rotateY(0deg);
}

.preferences {
    transform: rotateY(180deg);
}

img {
    border-radius: 50%;
    border: 5px solid #dee2e6;
    width: 100px; /* Width for the image */
    height: 100px; 
    margin-bottom: 20px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease;
    object-fit: cover; /* Ensures the image fills the shape properly */
}

img:hover {
    transform: scale(1.1); /* Subtle zoom effect on hover */
}

